[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
nalgebra = "0.32.3"
pathfinding = "4.6.0"
regex = "1.10.2"

[profile.release]
debug = true
